@@ -19,6 +19,7 @@ package org.apache.solr.handler;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.Writer;
 import java.nio.ByteBuffer;
@@ -69,6 +70,7 @@ import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.search.SolrIndexSearcher;
 import org.apache.solr.update.SolrIndexWriter;
 import org.apache.solr.util.NumberUtils;
+import org.apache.solr.util.PropertiesInputStream;
 import org.apache.solr.util.RefCounted;
 import org.apache.solr.util.plugin.SolrCoreAware;
 import org.slf4j.Logger;
@@ -473,7 +475,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     Directory dir;
     long size = 0;
     try {
-      dir = core.getDirectoryFactory().get(core.getNewIndexDir(), DirContext.DEFAULT, core.getSolrConfig().indexConfig.lockType);
+      dir = core.getDirectoryFactory().get(core.getIndexDir(), DirContext.DEFAULT, core.getSolrConfig().indexConfig.lockType);
       try {
         size = DirectoryFactory.sizeOfDirectory(dir);
       } finally {
@@ -593,14 +595,18 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     }
 
     SnapPuller snapPuller = tempSnapPuller;
-    if (showSlaveDetails && snapPuller != null) {
+    if (snapPuller != null) {
       Properties props = loadReplicationProperties();
-      try {
-        NamedList nl = snapPuller.getDetails();
-        slave.add("masterDetails", nl.get(CMD_DETAILS));
-      } catch (Exception e) {
-        LOG.warn("Exception while invoking 'details' method for replication on master ", e);
-        slave.add(ERR_STATUS, "invalid_master");
+      if (showSlaveDetails) {
+        try {
+          NamedList nl = snapPuller.getDetails();
+          slave.add("masterDetails", nl.get(CMD_DETAILS));
+        } catch (Exception e) {
+          LOG.warn(
+              "Exception while invoking 'details' method for replication on master ",
+              e);
+          slave.add(ERR_STATUS, "invalid_master");
+        }
       }
       slave.add(MASTER_URL, snapPuller.getMasterUrl());
       if (snapPuller.getPollInterval() != null) {
@@ -709,7 +715,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
 
     if (isMaster)
       details.add("master", master);
-    if (isSlave && showSlaveDetails)
+    if (slave.size() > 0)
       details.add("slave", slave);
     
     NamedList snapshotStats = snapShootDetails;
@@ -759,20 +765,32 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
   }
 
   Properties loadReplicationProperties() {
-    FileInputStream inFile = null;
-    Properties props = new Properties();
+    Directory dir = null;
     try {
-      File f = new File(core.getDataDir(), SnapPuller.REPLICATION_PROPERTIES);
-      if (f.exists()) {
-        inFile = new FileInputStream(f);
-        props.load(inFile);
+      try {
+        dir = core.getDirectoryFactory().get(core.getDataDir(),
+            DirContext.META_DATA, core.getSolrConfig().indexConfig.lockType);
+        if (!dir.fileExists(SnapPuller.REPLICATION_PROPERTIES)) {
+          return new Properties();
+        }
+        final IndexInput input = dir.openInput(
+            SnapPuller.REPLICATION_PROPERTIES, IOContext.DEFAULT);
+        try {
+          final InputStream is = new PropertiesInputStream(input);
+          Properties props = new Properties();
+          props.load(is);
+          return props;
+        } finally {
+          input.close();
+        }
+      } finally {
+        if (dir != null) {
+          core.getDirectoryFactory().release(dir);
+        }
       }
-    } catch (Exception e) {
-      LOG.warn("Exception while reading " + SnapPuller.REPLICATION_PROPERTIES);
-    } finally {
-      IOUtils.closeQuietly(inFile);
+    } catch (IOException e) {
+      throw new SolrException(ErrorCode.SERVER_ERROR, e);
     }
-    return props;
   }
 
 
